--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,21 @@
   "version": 2,
   "builds": [
     {
-      "src": "app.py",
-      "use": "@vercel/python"
+      "src": "aap/app.py",
+      "use": "@vercel/python",
+      "config": {
+        "includeFiles": [
+          "./app/**",
+          "**"
+        ]
+      }
     }
+    
   ],
   "routes": [
     {
-      "src": ".*",
-      "dest": "app.py"
+      "src": "/(.*)",
+      "dest": "app/app.py"
     }
   ]
 }
