--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -4,6 +4,18 @@
     {
       "src": "index.html",
       "use": "@vercel/static"
+    },
+    {
+      "src": "css/style.css",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "js/*.js",
+      "use": "@vercel/static"
+    },
+        {
+      "src": "dashboard.html",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
