--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -4,6 +4,8 @@
     { "src": "**", "use": "@vercel/static" }
   ],
   "routes": [
+    { "src": "/js/(.*)", "dest": "/js/$1" },
+    { "src": "/css/(.*)", "dest": "/css/$1" },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
