--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -6,6 +6,9 @@
   "routes": [
     { "src": "/js/(.*)", "dest": "/js/$1" },
     { "src": "/css/(.*)", "dest": "/css/$1" },
+    { "src": "/(.*)", "dest": "/dashboard.html" },
+    { "src": "/(.*)", "dest": "/manifest.json" },
     { "src": "/(.*)", "dest": "/index.html" }
+ 
   ]
 }
