--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,14 +1,13 @@
 {
   "version": 2,
   "builds": [
-    { "src": "**", "use": "@vercel/static" }
+    { "src": "index.html", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/js/(.*)", "dest": "/js/$1" },
     { "src": "/css/(.*)", "dest": "/css/$1" },
-    { "src": "/(.*)", "dest": "/dashboard.html" },
     { "src": "/(.*)", "dest": "/manifest.json" },
-    { "src": "/(.*)", "dest": "/index.html" }
- 
+    { "src": "/(.*)", "dest": "/index.html" },
+    { "src": "/(.*)", "dest": "/dashboard.html" }
   ]
 }
