--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "builds": [
-    { "src": "index.html", "use": "@vercel/static" }
+    { "src": "**", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/js/(.*)", "dest": "/js/$1" },
@@ -9,5 +9,6 @@
     { "src": "/(.*)", "dest": "/manifest.json" },
     { "src": "/(.*)", "dest": "/index.html" },
     { "src": "/(.*)", "dest": "/dashboard.html" }
+ 
   ]
 }
