--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -6,9 +6,8 @@
   "routes": [
     { "src": "/js/(.*)", "dest": "/js/$1" },
     { "src": "/css/(.*)", "dest": "/css/$1" },
-    { "src": "/(.*)", "dest": "/dashboard.html" },
-    { "src": "/(.*)", "dest": "/manifest.json" },
-    { "src": "/(.*)", "dest": "/index.html" }
- 
+    { "src": "/dashboard", "dest": "/dashboard.html" },
+    { "src": "/", "dest": "/index.html" },
+    { "src": "/manifest.json", "dest": "/manifest.json" }
   ]
 }
