Add HF_SENTIMENT_MODEL_URL and HF_TOXICITY_MODEL_URL to env and updated sentiment_service ,deepseek_service

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,6 +18,10 @@ DATABASE_NAME=XXXXXXXXX
 # Required for AI sentiment analysis and text processing
 HF_TOKEN=your-XXXXXXXXX
 
+# Hugging Face Model URLs
+HF_SENTIMENT_MODEL_URL=https://router.huggingface.co/models/CAMeL-Lab/bert-base-arabic-camelbert-da-sentiment
+HF_TOXICITY_MODEL_URL=https://router.huggingface.co/models/MoritzLaurer/mDeBERTa-v3-base-mnli-xnli
+
 # ===========================================
 # JWT CONFIGURATION
 # ===========================================
