Update front-end ui-ux and improving sementic_service and deepseek service

--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,15 @@ app.log
 README2.md
 deepseek_old.py
 webhook_old.py
-# WEBHOOK_PROCESS_ANALYSIS.md
-# VISUAL_COMPARISON.txt
-# PROFANITY_CENSORING_GUIDE.md
-# MIGRATION_GUIDE.md
-# NEW_WEBHOOK_ARCHITECTURE.md
-# IMPLEMENTATION_SUMMARY.md
-# QUICK_EXAMPLES_PROFANITY.md
-# README_V2_COMPLETE.md
-# V2_PROFANITY_UPDATE.md
-# V2_QUICK_REFERENCE.md
+WEBHOOK_PROCESS_ANALYSIS.md
+VISUAL_COMPARISON.txts
+PROFANITY_CENSORING_GUIDE.md
+MIGRATION_GUIDE.md
+NEW_WEBHOOK_ARCHITECTURE.md
+IMPLEMENTATION_SUMMARY.md
+QUICK_EXAMPLES_PROFANITY.md
+README_V2_COMPLETE.md
+V2_PROFANITY_UPDATE.md
+V2_QUICK_REFERENCE.md
+VISUAL_COMPARISON.txt
+.vscode
