feat: add Tally webhook signature verification
- Implement HMAC-SHA256 signature verification in webhook controller using TALLY_SIGNING_SECRET
- Add SIGNING_SECRET to config and environment variables for secure webhook validation
- Update .gitignore to exclude README4.md
- Enhances security by authenticating incoming Tally webhooks to prevent unauthorized access

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -53,6 +53,12 @@ MODEL_ID=XXXX/XXXXXX
 # URL for form of TALLY
 TALLY_FORM_URL=https://tally.so/XXXXX
 
+# Tally Webhook Signing Secret
+# Get this from your Tally form's settings under "Integrations" -> "Webhook"
+# Generate a secure random string if needed
+TALLY_SIGNING_SECRET=your-tally-signing-secret
+
+
 # ===========================================
 # DEVELOPMENT SETTINGS
 # ===========================================
@@ -73,6 +79,8 @@ CORS_ORIGINS=http://localhost:3000,http://localhost:5000,https://your-frontend-d
 # ===========================================
 # Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
+
+SIGNING_SECRET=your_secret_here
 
 # ===========================================
 # SETUP INSTRUCTIONS
