--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -61,7 +61,8 @@ dependencies:
   url_launcher: ^6.3.1
   share_plus: ^10.1.3    
   path_provider: ^2.1.5  
-  permission_handler: ^11.3.1 
+  permission_handler: ^11.3.1
+  gal: ^2.3.0 
 
   # Icons
   cupertino_icons: ^1.0.8
