--- a/app/.gitignore
+++ b/app/.gitignore
@@ -43,3 +43,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Environment variables (sensitive data)
+.env
+.env.local
+.env.*.local
+*.env
+!.env.example
