--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,7 +21,7 @@ HF_TOKEN=your-XXXXXXXXX
 # Hugging Face Model URLs
 HF_SENTIMENT_MODEL_URL=https://router.huggingface.co/models/CAMeL-Lab/bert-base-arabic-camelbert-da-sentiment
 HF_TOXICITY_MODEL_URL=https://router.huggingface.co/models/MoritzLaurer/mDeBERTa-v3-base-mnli-xnli
-
+HF_ARABIC_TOXICITY_MODEL_URL=https://router.huggingface.co/hf-inference/models/textdetox/xlmr-large-toxicity-classifier-v2
 # ===========================================
 # JWT CONFIGURATION
 # ===========================================
