--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,12 +1,6 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "**",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
+  "rewrites": [
     {
       "src": "/js/(.*)",
       "dest": "/js/$1"
@@ -26,6 +20,17 @@
     {
       "src": "/manifest.json",
       "dest": "/manifest.json"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://fonts.googleapis.com; font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://reputation-guardian-api.vercel.app https://api-reputation-guardian.vercel.app;"
+        }
+      ]
     }
   ]
 }
