--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,12 @@
 {
   "version": 2,
-  "rewrites": [
+   "builds": [
+    {
+      "src": "**",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
     {
       "src": "/js/(.*)",
       "dest": "/js/$1"
