--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -68,7 +68,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.8.0 
   dartz: ^0.10.1
-  
+  flutter_launcher_icons:
   # Environment Variables
   flutter_dotenv: ^5.1.0
 
